re PR tree-optimization/53748 (ice in fold_convert_loc)

PR tree-optimization/53748
	* tree-ssa-phiopt.c (conditional_replacement): Only optimize
	if arg0/arg1 have integral or pointer types.

	* gcc.c-torture/compile/pr53748.c: New test.

From-SVN: r188975